// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden seeded games > n=3 seed=101 official 1`] = `
{
  "actions": [
    {
      "by": {
        "kind": "system",
      },
      "color": "coral",
      "error": null,
      "locale": "en",
      "name": "Bot1",
      "now": 1790000000000,
      "ok": true,
      "playerId": "p_b07000000000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "azure",
      "error": null,
      "locale": "en",
      "name": "Bot2",
      "now": 1790000000100,
      "ok": true,
      "playerId": "p_b07000010000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "lemon",
      "error": null,
      "locale": "en",
      "name": "Bot3",
      "now": 1790000000200,
      "ok": true,
      "playerId": "p_b07000020000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000000300,
      "ok": true,
      "patch": {
        "winRule": "official",
      },
      "type": "UPDATE_SETTINGS",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000000300,
      "ok": true,
      "type": "START",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000002362,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000005264,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000005640,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000008209,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000008512,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000009596,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000012548,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000014180,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000015920,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000016941,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000017326,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000019503,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000022406,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000024187,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000027018,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000028246,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000031071,
      "ok": true,
      "text": "zzwrong0",
      "type": "SUBMIT_GUESS",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000039071,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000039652,
      "ok": true,
      "type": "PLAY_AGAIN",
    },
  ],
  "final": {
    "deadline": null,
    "deadlineSeq": 12,
    "eliminated": null,
    "gameNumber": 1,
    "guess": null,
    "guessLog": [],
    "history": [],
    "hostPlayerId": "p_b07000000000000000000000",
    "joinUrl": "https://example.test/SIMR",
    "lastVote": null,
    "pair": null,
    "phase": "LOBBY",
    "players": [
      {
        "alive": true,
        "color": "coral",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000000000000000000000",
        "joinedAt": 1790000000000,
        "left": false,
        "locale": "en",
        "name": "Bot1",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 0,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "azure",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000010000000000000000",
        "joinedAt": 1790000000100,
        "left": false,
        "locale": "en",
        "name": "Bot2",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 1,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "lemon",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000020000000000000000",
        "joinedAt": 1790000000200,
        "left": false,
        "locale": "en",
        "name": "Bot3",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 2,
        "spoke": false,
        "word": null,
      },
    ],
    "result": null,
    "revote": false,
    "rngState": 2399460387,
    "roleCounts": null,
    "roomCode": "SIMR",
    "round": 0,
    "schema": 1,
    "settings": {
      "blankCount": 1,
      "blankGuess": true,
      "clueSeconds": 45,
      "difficulties": [
        1,
        2,
        3,
      ],
      "familyFilter": true,
      "guessSeconds": 45,
      "packIds": [],
      "points": {
        "blank": 10,
        "civilian": 2,
        "undercover": 10,
      },
      "revealRoles": false,
      "revealSeconds": 30,
      "roleMode": "auto",
      "swapSides": true,
      "tieBreak": "random",
      "undercoverCount": 0,
      "voteSeconds": 90,
      "winRule": "official",
      "wordLocale": "en",
    },
    "speakingOrder": [],
    "starterId": null,
    "tieCandidates": [],
    "turnIdx": 0,
    "usedPairKeys": [
      "test-en-01:p002",
    ],
    "version": 23,
    "votes": {},
  },
  "stalemate": false,
  "winner": "CIVILIANS",
}
`;

exports[`golden seeded games > n=5 seed=202 official 1`] = `
{
  "actions": [
    {
      "by": {
        "kind": "system",
      },
      "color": "coral",
      "error": null,
      "locale": "en",
      "name": "Bot1",
      "now": 1790000000000,
      "ok": true,
      "playerId": "p_b07000000000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "azure",
      "error": null,
      "locale": "en",
      "name": "Bot2",
      "now": 1790000000100,
      "ok": true,
      "playerId": "p_b07000010000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "lemon",
      "error": null,
      "locale": "en",
      "name": "Bot3",
      "now": 1790000000200,
      "ok": true,
      "playerId": "p_b07000020000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "jade",
      "error": null,
      "locale": "en",
      "name": "Bot4",
      "now": 1790000000300,
      "ok": true,
      "playerId": "p_b07000030000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "grape",
      "error": null,
      "locale": "en",
      "name": "Bot5",
      "now": 1790000000400,
      "ok": true,
      "playerId": "p_b07000040000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000000500,
      "ok": true,
      "patch": {
        "winRule": "official",
      },
      "type": "UPDATE_SETTINGS",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000000500,
      "ok": true,
      "type": "START",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000001918,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000004602,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000004681,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000004840,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000006195,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000006750,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000007559,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000008204,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000010895,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000012962,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000013880,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000015294,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000015719,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000018706,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000021466,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000021979,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000023650,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000026115,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000027144,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000028716,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000028854,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000031585,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000039585,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000040077,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000042124,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000043782,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000044748,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000047146,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000049689,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000051846,
      "ok": true,
      "playerId": "p_b07000040000000000000000",
      "type": "DISCONNECT",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000053350,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000054190,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000062190,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000065014,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000065928,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000067742,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000069696,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000069705,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000071243,
      "ok": true,
      "playerId": "p_b07000020000000000000000",
      "type": "DISCONNECT",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000074052,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000075247,
      "ok": true,
      "playerId": "p_b07000030000000000000000",
      "type": "DISCONNECT",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000082052,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000083131,
      "ok": true,
      "type": "PLAY_AGAIN",
    },
  ],
  "final": {
    "deadline": null,
    "deadlineSeq": 22,
    "eliminated": null,
    "gameNumber": 1,
    "guess": null,
    "guessLog": [],
    "history": [],
    "hostPlayerId": "p_b07000000000000000000000",
    "joinUrl": "https://example.test/SIMR",
    "lastVote": null,
    "pair": null,
    "phase": "LOBBY",
    "players": [
      {
        "alive": true,
        "color": "coral",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000000000000000000000",
        "joinedAt": 1790000000000,
        "left": false,
        "locale": "en",
        "name": "Bot1",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 0,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "azure",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000010000000000000000",
        "joinedAt": 1790000000100,
        "left": false,
        "locale": "en",
        "name": "Bot2",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 1,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "lemon",
        "connected": false,
        "disconnectedAt": 1790000083131,
        "id": "p_b07000020000000000000000",
        "joinedAt": 1790000000200,
        "left": false,
        "locale": "en",
        "name": "Bot3",
        "ready": false,
        "role": null,
        "score": 10,
        "seat": 2,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "jade",
        "connected": false,
        "disconnectedAt": 1790000083131,
        "id": "p_b07000030000000000000000",
        "joinedAt": 1790000000300,
        "left": false,
        "locale": "en",
        "name": "Bot4",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 3,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "grape",
        "connected": false,
        "disconnectedAt": 1790000083131,
        "id": "p_b07000040000000000000000",
        "joinedAt": 1790000000400,
        "left": false,
        "locale": "en",
        "name": "Bot5",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 4,
        "spoke": false,
        "word": null,
      },
    ],
    "result": null,
    "revote": false,
    "rngState": 1135789148,
    "roleCounts": null,
    "roomCode": "SIMR",
    "round": 0,
    "schema": 1,
    "settings": {
      "blankCount": 1,
      "blankGuess": true,
      "clueSeconds": 45,
      "difficulties": [
        1,
        2,
        3,
      ],
      "familyFilter": true,
      "guessSeconds": 45,
      "packIds": [],
      "points": {
        "blank": 10,
        "civilian": 2,
        "undercover": 10,
      },
      "revealRoles": false,
      "revealSeconds": 30,
      "roleMode": "auto",
      "swapSides": true,
      "tieBreak": "random",
      "undercoverCount": 0,
      "voteSeconds": 90,
      "winRule": "official",
      "wordLocale": "en",
    },
    "speakingOrder": [],
    "starterId": null,
    "tieCandidates": [],
    "turnIdx": 0,
    "usedPairKeys": [
      "test-en-01:p002",
    ],
    "version": 49,
    "votes": {},
  },
  "stalemate": false,
  "winner": "INFILTRATORS",
}
`;

exports[`golden seeded games > n=8 seed=303 parity 1`] = `
{
  "actions": [
    {
      "by": {
        "kind": "system",
      },
      "color": "coral",
      "error": null,
      "locale": "en",
      "name": "Bot1",
      "now": 1790000000000,
      "ok": true,
      "playerId": "p_b07000000000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "azure",
      "error": null,
      "locale": "en",
      "name": "Bot2",
      "now": 1790000000100,
      "ok": true,
      "playerId": "p_b07000010000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "lemon",
      "error": null,
      "locale": "en",
      "name": "Bot3",
      "now": 1790000000200,
      "ok": true,
      "playerId": "p_b07000020000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "jade",
      "error": null,
      "locale": "en",
      "name": "Bot4",
      "now": 1790000000300,
      "ok": true,
      "playerId": "p_b07000030000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "grape",
      "error": null,
      "locale": "en",
      "name": "Bot5",
      "now": 1790000000400,
      "ok": true,
      "playerId": "p_b07000040000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "tangerine",
      "error": null,
      "locale": "en",
      "name": "Bot6",
      "now": 1790000000500,
      "ok": true,
      "playerId": "p_b07000050000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "aqua",
      "error": null,
      "locale": "en",
      "name": "Bot7",
      "now": 1790000000600,
      "ok": true,
      "playerId": "p_b07000060000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "rose",
      "error": null,
      "locale": "en",
      "name": "Bot8",
      "now": 1790000000700,
      "ok": true,
      "playerId": "p_b07000070000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000000800,
      "ok": true,
      "patch": {
        "winRule": "parity",
      },
      "type": "UPDATE_SETTINGS",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000000800,
      "ok": true,
      "type": "START",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000003434,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000003561,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000005209,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000007524,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000008514,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000010423,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000013212,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000015313,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000015537,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000016218,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000018613,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000019104,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000021012,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000021616,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000022803,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000025595,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000028199,
      "ok": true,
      "targetId": "p_b07000050000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000028516,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000030520,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000031072,
      "ok": true,
      "playerId": "p_b07000070000000000000000",
      "type": "DISCONNECT",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000033981,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000036638,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000038878,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000041503,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000043520,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000044290,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000046994,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000049783,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000052547,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000055390,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000056627,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000057520,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000059897,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000062148,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000062761,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000063761,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000065892,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000068822,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000069156,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000069258,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000069451,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000072237,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000074305,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000074392,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000076208,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000078371,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000080888,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000083661,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000084695,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000092695,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000095196,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000097538,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000098428,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000101073,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000103147,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000105011,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000107593,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000107923,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000110284,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000111350,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000112113,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000112958,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000120958,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000122552,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000122841,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000125598,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000126567,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000126712,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000127589,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000128508,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000129468,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000130097,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000131448,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000139448,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000140807,
      "ok": true,
      "type": "PLAY_AGAIN",
    },
  ],
  "final": {
    "deadline": null,
    "deadlineSeq": 39,
    "eliminated": null,
    "gameNumber": 1,
    "guess": null,
    "guessLog": [],
    "history": [],
    "hostPlayerId": "p_b07000000000000000000000",
    "joinUrl": "https://example.test/SIMR",
    "lastVote": null,
    "pair": null,
    "phase": "LOBBY",
    "players": [
      {
        "alive": true,
        "color": "coral",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000000000000000000000",
        "joinedAt": 1790000000000,
        "left": false,
        "locale": "en",
        "name": "Bot1",
        "ready": false,
        "role": null,
        "score": 10,
        "seat": 0,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "azure",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000010000000000000000",
        "joinedAt": 1790000000100,
        "left": false,
        "locale": "en",
        "name": "Bot2",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 1,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "lemon",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000020000000000000000",
        "joinedAt": 1790000000200,
        "left": false,
        "locale": "en",
        "name": "Bot3",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 2,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "jade",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000030000000000000000",
        "joinedAt": 1790000000300,
        "left": false,
        "locale": "en",
        "name": "Bot4",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 3,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "grape",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000040000000000000000",
        "joinedAt": 1790000000400,
        "left": false,
        "locale": "en",
        "name": "Bot5",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 4,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "tangerine",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000050000000000000000",
        "joinedAt": 1790000000500,
        "left": false,
        "locale": "en",
        "name": "Bot6",
        "ready": false,
        "role": null,
        "score": 10,
        "seat": 5,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "aqua",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000060000000000000000",
        "joinedAt": 1790000000600,
        "left": false,
        "locale": "en",
        "name": "Bot7",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 6,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "rose",
        "connected": false,
        "disconnectedAt": 1790000140807,
        "id": "p_b07000070000000000000000",
        "joinedAt": 1790000000700,
        "left": false,
        "locale": "en",
        "name": "Bot8",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 7,
        "spoke": false,
        "word": null,
      },
    ],
    "result": null,
    "revote": false,
    "rngState": 1703683722,
    "roleCounts": null,
    "roomCode": "SIMR",
    "round": 0,
    "schema": 1,
    "settings": {
      "blankCount": 1,
      "blankGuess": true,
      "clueSeconds": 45,
      "difficulties": [
        1,
        2,
        3,
      ],
      "familyFilter": true,
      "guessSeconds": 45,
      "packIds": [],
      "points": {
        "blank": 10,
        "civilian": 2,
        "undercover": 10,
      },
      "revealRoles": false,
      "revealSeconds": 30,
      "roleMode": "auto",
      "swapSides": true,
      "tieBreak": "random",
      "undercoverCount": 0,
      "voteSeconds": 90,
      "winRule": "parity",
      "wordLocale": "en",
    },
    "speakingOrder": [],
    "starterId": null,
    "tieCandidates": [],
    "turnIdx": 0,
    "usedPairKeys": [
      "test-en-01:p010",
    ],
    "version": 85,
    "votes": {},
  },
  "stalemate": false,
  "winner": "INFILTRATORS",
}
`;

exports[`golden seeded games > n=12 seed=404 official 1`] = `
{
  "actions": [
    {
      "by": {
        "kind": "system",
      },
      "color": "coral",
      "error": null,
      "locale": "en",
      "name": "Bot1",
      "now": 1790000000000,
      "ok": true,
      "playerId": "p_b07000000000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "azure",
      "error": null,
      "locale": "en",
      "name": "Bot2",
      "now": 1790000000100,
      "ok": true,
      "playerId": "p_b07000010000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "lemon",
      "error": null,
      "locale": "en",
      "name": "Bot3",
      "now": 1790000000200,
      "ok": true,
      "playerId": "p_b07000020000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "jade",
      "error": null,
      "locale": "en",
      "name": "Bot4",
      "now": 1790000000300,
      "ok": true,
      "playerId": "p_b07000030000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "grape",
      "error": null,
      "locale": "en",
      "name": "Bot5",
      "now": 1790000000400,
      "ok": true,
      "playerId": "p_b07000040000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "tangerine",
      "error": null,
      "locale": "en",
      "name": "Bot6",
      "now": 1790000000500,
      "ok": true,
      "playerId": "p_b07000050000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "aqua",
      "error": null,
      "locale": "en",
      "name": "Bot7",
      "now": 1790000000600,
      "ok": true,
      "playerId": "p_b07000060000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "rose",
      "error": null,
      "locale": "en",
      "name": "Bot8",
      "now": 1790000000700,
      "ok": true,
      "playerId": "p_b07000070000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "mint",
      "error": null,
      "locale": "en",
      "name": "Bot9",
      "now": 1790000000800,
      "ok": true,
      "playerId": "p_b07000080000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "plum",
      "error": null,
      "locale": "en",
      "name": "Bot10",
      "now": 1790000000900,
      "ok": true,
      "playerId": "p_b07000090000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "sand",
      "error": null,
      "locale": "en",
      "name": "Bot11",
      "now": 1790000001000,
      "ok": true,
      "playerId": "p_b070000a0000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "system",
      },
      "color": "lilac",
      "error": null,
      "locale": "en",
      "name": "Bot12",
      "now": 1790000001100,
      "ok": true,
      "playerId": "p_b070000b0000000000000000",
      "type": "JOIN",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000001200,
      "ok": true,
      "patch": {
        "winRule": "official",
      },
      "type": "UPDATE_SETTINGS",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000001200,
      "ok": true,
      "type": "START",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000003006,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000004010,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000004141,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000004624,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000007348,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000008084,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000009837,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000010766,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000010992,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000012929,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000015561,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000080000000000000000",
      },
      "error": null,
      "now": 1790000017659,
      "ok": true,
      "type": "READY",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000020290,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000022181,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000022769,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000022824,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000022954,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000025935,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000080000000000000000",
      },
      "error": null,
      "now": 1790000028437,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000030231,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000032999,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000035053,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000035451,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000036868,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000039468,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000040150,
      "ok": true,
      "targetId": "p_b070000a0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000040697,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000041225,
      "ok": true,
      "targetId": "p_b07000050000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000043111,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000044985,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000045560,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000046324,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000040000000000000000",
      },
      "error": null,
      "now": 1790000048641,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000050516,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000052083,
      "ok": true,
      "targetId": "p_b07000040000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000080000000000000000",
      },
      "error": null,
      "now": 1790000052335,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000053130,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000054695,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000055499,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000058172,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000058712,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000080000000000000000",
      },
      "error": null,
      "now": 1790000060776,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000060927,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000063303,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000063356,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000064660,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000065576,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000066816,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000068951,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000071240,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000072577,
      "ok": true,
      "targetId": "p_b07000080000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000073541,
      "ok": true,
      "targetId": "p_b070000a0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000073861,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000080000000000000000",
      },
      "error": null,
      "now": 1790000076840,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000077964,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000079200,
      "ok": true,
      "targetId": "p_b07000080000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000079316,
      "ok": true,
      "targetId": "p_b07000080000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000081919,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000082036,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000090036,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000091851,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000093759,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000096697,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000097801,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000099748,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000100954,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000103017,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000104011,
      "ok": true,
      "playerId": "p_b07000080000000000000000",
      "type": "DISCONNECT",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000105898,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000108594,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000111408,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000112219,
      "ok": true,
      "targetId": "p_b07000050000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000114327,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000050000000000000000",
      },
      "error": null,
      "now": 1790000115282,
      "ok": true,
      "targetId": "p_b070000a0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000117867,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000118078,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000120721,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000123584,
      "ok": true,
      "targetId": "p_b07000050000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000124036,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000124504,
      "ok": true,
      "targetId": "p_b07000050000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000127326,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000135326,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000136512,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000138425,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000139307,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000141098,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000141957,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000142484,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000144191,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000145667,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000146149,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000147308,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000148012,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000150269,
      "ok": true,
      "targetId": "p_b070000a0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000151382,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000154064,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000154912,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000157893,
      "ok": true,
      "targetId": "p_b07000030000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000160267,
      "ok": true,
      "playerId": "p_b07000080000000000000000",
      "type": "KICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000161216,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000162831,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000165442,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000167159,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000167975,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000170347,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000170499,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000172832,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000010000000000000000",
      },
      "error": null,
      "now": 1790000175670,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000176841,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000179126,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000179152,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000180321,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000181964,
      "ok": true,
      "targetId": "p_b07000090000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000189964,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000090000000000000000",
      },
      "error": null,
      "now": 1790000192376,
      "ok": true,
      "text": "zzwrong0",
      "type": "SUBMIT_GUESS",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000200376,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000202651,
      "ok": true,
      "playerId": "p_b07000010000000000000000",
      "type": "DISCONNECT",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000203854,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000205498,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000207701,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000209946,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000212160,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000212731,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000213125,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000213437,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000214207,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000217167,
      "ok": true,
      "targetId": "p_b07000020000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000219737,
      "ok": true,
      "targetId": "p_b07000000000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000221146,
      "ok": true,
      "targetId": "p_b07000010000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000221399,
      "ok": true,
      "targetId": "p_b070000a0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000221690,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000229690,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000231027,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000231776,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000232512,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000234048,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000237005,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000239993,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000241570,
      "ok": true,
      "type": "CLUE_DONE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000244442,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000b0000000000000000",
      },
      "error": null,
      "now": 1790000245940,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000030000000000000000",
      },
      "error": null,
      "now": 1790000247407,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000020000000000000000",
      },
      "error": null,
      "now": 1790000249383,
      "ok": true,
      "targetId": "p_b070000b0000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b070000a0000000000000000",
      },
      "error": null,
      "now": 1790000250174,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000070000000000000000",
      },
      "error": null,
      "now": 1790000252621,
      "ok": true,
      "targetId": "p_b07000060000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000000000000000000000",
      },
      "error": null,
      "now": 1790000255226,
      "ok": true,
      "targetId": "p_b07000070000000000000000",
      "type": "CAST_VOTE",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000257412,
      "ok": true,
      "type": "HOST_ADVANCE",
    },
    {
      "by": {
        "kind": "player",
        "playerId": "p_b07000060000000000000000",
      },
      "error": null,
      "now": 1790000259156,
      "ok": true,
      "text": "zzwrong1",
      "type": "SUBMIT_GUESS",
    },
    {
      "by": {
        "kind": "system",
      },
      "error": null,
      "now": 1790000267156,
      "ok": true,
      "type": "TICK",
    },
    {
      "by": {
        "kind": "tv",
      },
      "error": null,
      "now": 1790000269281,
      "ok": true,
      "type": "PLAY_AGAIN",
    },
  ],
  "final": {
    "deadline": null,
    "deadlineSeq": 77,
    "eliminated": null,
    "gameNumber": 1,
    "guess": null,
    "guessLog": [],
    "history": [],
    "hostPlayerId": "p_b07000000000000000000000",
    "joinUrl": "https://example.test/SIMR",
    "lastVote": null,
    "pair": null,
    "phase": "LOBBY",
    "players": [
      {
        "alive": true,
        "color": "coral",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000000000000000000000",
        "joinedAt": 1790000000000,
        "left": false,
        "locale": "en",
        "name": "Bot1",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 0,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "azure",
        "connected": false,
        "disconnectedAt": 1790000269281,
        "id": "p_b07000010000000000000000",
        "joinedAt": 1790000000100,
        "left": false,
        "locale": "en",
        "name": "Bot2",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 1,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "lemon",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000020000000000000000",
        "joinedAt": 1790000000200,
        "left": false,
        "locale": "en",
        "name": "Bot3",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 2,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "jade",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000030000000000000000",
        "joinedAt": 1790000000300,
        "left": false,
        "locale": "en",
        "name": "Bot4",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 3,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "grape",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000040000000000000000",
        "joinedAt": 1790000000400,
        "left": false,
        "locale": "en",
        "name": "Bot5",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 4,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "tangerine",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000050000000000000000",
        "joinedAt": 1790000000500,
        "left": false,
        "locale": "en",
        "name": "Bot6",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 5,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "aqua",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000060000000000000000",
        "joinedAt": 1790000000600,
        "left": false,
        "locale": "en",
        "name": "Bot7",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 6,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "rose",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000070000000000000000",
        "joinedAt": 1790000000700,
        "left": false,
        "locale": "en",
        "name": "Bot8",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 7,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "plum",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b07000090000000000000000",
        "joinedAt": 1790000000900,
        "left": false,
        "locale": "en",
        "name": "Bot10",
        "ready": false,
        "role": null,
        "score": 0,
        "seat": 9,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "sand",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b070000a0000000000000000",
        "joinedAt": 1790000001000,
        "left": false,
        "locale": "en",
        "name": "Bot11",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 10,
        "spoke": false,
        "word": null,
      },
      {
        "alive": true,
        "color": "lilac",
        "connected": true,
        "disconnectedAt": null,
        "id": "p_b070000b0000000000000000",
        "joinedAt": 1790000001100,
        "left": false,
        "locale": "en",
        "name": "Bot12",
        "ready": false,
        "role": null,
        "score": 2,
        "seat": 11,
        "spoke": false,
        "word": null,
      },
    ],
    "result": null,
    "revote": false,
    "rngState": 2271578296,
    "roleCounts": null,
    "roomCode": "SIMR",
    "round": 0,
    "schema": 1,
    "settings": {
      "blankCount": 1,
      "blankGuess": true,
      "clueSeconds": 45,
      "difficulties": [
        1,
        2,
        3,
      ],
      "familyFilter": true,
      "guessSeconds": 45,
      "packIds": [],
      "points": {
        "blank": 10,
        "civilian": 2,
        "undercover": 10,
      },
      "revealRoles": false,
      "revealSeconds": 30,
      "roleMode": "auto",
      "swapSides": true,
      "tieBreak": "random",
      "undercoverCount": 0,
      "voteSeconds": 90,
      "winRule": "official",
      "wordLocale": "en",
    },
    "speakingOrder": [],
    "starterId": null,
    "tieCandidates": [],
    "turnIdx": 0,
    "usedPairKeys": [
      "test-en-01:p004",
    ],
    "version": 163,
    "votes": {},
  },
  "stalemate": false,
  "winner": "CIVILIANS",
}
`;
